--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Engram Document</title>
+    <script src="/session.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
